--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://moslem-parsarad-dev.github.io/moslem-parsarad-portfolio-app",
   "name": "moslem-parsarad-portfolio-app",
   "version": "0.1.0",
   "private": true,
